--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -60,7 +60,7 @@
 
   .about-header {
     color: #e0e1e1;
-    font-family: "Bree Serif";
+    font-family: "Poppins";
     font-size: 28px;
   }
 
